# web-watcher

./: .coveragerc  .env.sample  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  watcher.py
references/: README.md
src/: commands.py  settings.py
src/wwatch/: arq.py  cli.py  downloader.py  schemas.py  settings.py
test/: first_download.html  reference.html  second_download.html  test_command.py
