[tool.poetry]
name = "web-watcher"
version = "0.1.0"
description = "Alerts when a watched web page changes"
authors = ["ebreton <emmanuel@breton.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
PyYAML = "^5.4.1"
docopt = "^0.6.2"
docopt-dispatch = "^0.0.2"
click-help-colors = "^0.9"
click-spinner = "^0.1.10"
colorama = "^0.4.4"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.1"}
shellingham = "^1.4.0"
typer = "^0.3.2"
typer-cli = "^0.0.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
autopep8 = "^1.5.6"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
